# occystrap

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .stestr.conf  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMAGE_STORES.md  Jenkinsfile-debian-11-none  Jenkinsfile-ubuntu-2004  PLAN-workflow-refactor.md  PLAN-zstd.md  README.md  RELEASE-SETUP.md  ci.yml  pyproject.toml  release.sh  renovate.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: actionlint.yaml
.github/workflows/: codeql-analysis.yml  export-repo-config.yml  functional-tests.yml  historical_tarfile_formats.yml  pr-address-comments.yml  pr-fix-tests.yml  pr-re-review.yml  pr-retest.yml  python-unit-tests.yml  release.yml  renovate.yml  test-drift-fix.yml
deploy/: .stestr.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
deploy/ansible/: ci.yml
deploy/occystrap_ci/testdata/deletion_layers/: Dockerfile
deploy/occystrap_ci/testdata/tarfiles/: Dockerfile  capture.sh  docker-samples.yml  rm.c
deploy/occystrap_ci/tests/: test_dir_deep_images.py  test_docker_input.py  test_docker_output.py  test_exclude_filter.py  test_filter_chaining.py  test_inspect_filter.py  test_normalize_timestamps.py  test_oci_hello_world.py  test_registry_output.py  test_registry_push.py  test_search_layers.py  test_tarfile.py  test_tarformat.py  test_whiteout.py
docs/: command-reference.md  docker-tarball-formats.md  index.md  installation.md  pipeline.md  tar-format-selection.md  use-cases.md
files/: docker_daemon.json  docker_registry.service
occystrap/: common.py  compression.py  constants.py  docker_extract.py  docker_registry.py  input_tarfile.py  main.py  output_directory.py  output_mounts.py  output_ocibundle.py  output_staticregistry.py  output_tarfile.py  pipeline.py  search.py  tarformat.py  uri.py  util.py
occystrap/filters/: __init__.py  base.py  exclude.py  inspect.py  normalize_timestamps.py  search.py
occystrap/inputs/: __init__.py  base.py  docker.py  registry.py  tarfile.py
occystrap/outputs/: __init__.py  base.py  directory.py  docker.py  mounts.py  ocibundle.py  registry.py  tarfile.py
occystrap/tests/: test_compression.py  test_inspect.py  test_registry_output.py  test_tarformat.py
tools/: address-comments-with-claude.sh  create-review-issues.py  flake8wrap.sh  render-review.py  review-pr-with-claude.sh  review-schema.json
