[metadata]
name = occystrap
summary = occystrap: docker and OCI container tools
license = "License :: OSI Approved :: Apache Software License"
description_file = README.md
author = Michael Still
author_email = mikal@stillhq.com
home_page = https://github.com/shakenfist/occystrap
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    occystrap

[entry_points]
console_scripts =
    occystrap = occystrap.main:cli
    
[pbr]
skip_changelog = True
