[metadata]
name = occystrap_ci
summary = Occy Strap CI: test and validation for Occy Strap
license = Apache2
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://www.madebymikal.com/category/occy-strap/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    occystrap_ci

[entry_points]

[pbr]
skip_changelog = True
